# web-files-server

./: .gitignore  Cargo.toml  README.md  config.toml
public/: main.cpp
public/abc/: main.cpp
src/: main.rs  static_handler.rs
views/: admin.html  list.html
