[package]
name = "web-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.37.7", features = ["serve-static", "basic-auth","anyhow"] }
tokio = { version = "1.23.0", features = ["macros"] }
serde = "1.0.150"
serde_json="1.0.89"
time="0.3.17"
percent-encoding="2.2.0"
http="0.2.8"
mime="0.3.16"
anyhow="1.0.66"
chrono="0.4.23"
tera="1.17.1"
path-absolutize = "3.0.14"